# rust-fontconfig

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  travis.yml
.github/workflows/: c-bindings.yml  ci.yml
examples/: character_resolution.rs  debug_azul_fonts.rs  getfont.rs  integration_api.rs  query.rs  registry.rs  unicode_aware_fonts.rs  zwj_query.rs
ffi/: example.c  example_registry.c  rust-fontconfig.h  rust_fontconfig.h
src/: config.rs  disk_cache.rs  ffi.rs  lib.rs  mobile_ios.rs  multithread.rs  registry.rs  scoring.rs  tests.rs  utils.rs
tests/: issue_21.rs  tests.rs
