[package]
name = "rust-fontconfig"
version = "1.0.1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
edition = "2021"
license = "MIT"
description = "Pure-Rust alternative to font-loader and fontconfig w. minimal dependencies"
repository = "https://github.com/fschutt/rust-fontconfig"
keywords = ["fontconfig", "font-loader", "font", "system-fonts"]
categories = ["gui"]
readme = "README.md"

[lib]
name = "rust_fontconfig"

[build-dependencies]
cbindgen = "0.24"

[dependencies]
xmlparser = { version = "0.13.3", default-features = false }
rayon = { version = "1.5.0", default-features = false, optional = true }
allsorts-subset-browser = { version = "0.16.0", default-features = false, features = ["flate2_rust"], optional = true }
base64 = "0.22.1"

[target.'cfg(not(target_family="wasm"))'.dependencies]
mmapio = { version = "0.9.1", default-features = false, optional = true }

[features]
default = ["std", "parsing", "multithreading"]
std = ["mmapio"]
multithreading = ["rayon"]
parsing = ["allsorts-subset-browser"]
ffi = ["parsing", "std"]
